# FPGA_MSXtR

./: .gitignore  fpga_msxtr_controller.c
.github/: copilot-instructions.md
controller/pico2w/: CMakeLists.txt  fpga_msxtr_controller.c  keyboard.c  rtc_stub.c
controller/pico2w_labo_vdp007/: CMakeLists.txt  fpga_msxtr_controller.c  keyboard.h  readme.md  vdp_control.c  vdp_control.h
controller/pico2w_labo_vdp009/: CMakeLists.txt  fpga_config.c  fpga_config.h  fpga_msxtr_controller.c  fpga_uart.c  fpga_uart.h  hw_config.c  vdp_control.h
doc/: FPGA-PICO_protocol.txt  FPGA_MSXtR_DUAL_NANO20K.odg  FPGA_MSXtR_TangFPGA_pin_DUAL_NANO20K.xlsx  ~$FPGA_MSXtR_TangFPGA_pin_DUAL_NANO20K.xlsx
keyboard/.metadata/: .log4j2.xml  version.ini
keyboard/KiCad/: FPGA_MSXtR_Portable_Keyboard.dcm  FPGA_MSXtR_Portable_Keyboard.kicad_sym  QFP50P900X900X160-48N.kicad_mod  STM32G0B0CET6.lib  STM32G0B0CET6.mod
keyboard/MSXtR_Portable_Keyboard/: .cproject  .mxproject  .project  MSXtR_Portable_Keyboard Debug.launch  MSXtR_Portable_Keyboard.ioc  STM32G0B0CETX_FLASH.ld  STM32G0B0CETX_RAM.ld
keyboard/MSXtR_Portable_Keyboard/.metadata/: .log4j2.xml  version.ini
keyboard/MSXtR_Portable_Keyboard/Debug/: MSXtR_Portable_Keyboard.elf  MSXtR_Portable_Keyboard.list  MSXtR_Portable_Keyboard.map  objects.list  sources.mk
keyboard/MSXtR_Portable_Keyboard/Release/: MSXtR_Portable_Keyboard.elf  MSXtR_Portable_Keyboard.list  MSXtR_Portable_Keyboard.map  makefile
labo/FPGA_MSXtR_CPU_000/: FPGA_MSXtR.gprj
labo/FPGA_MSXtR_CPU_000/src/: FPGA_MSXtR.cst  FPGA_MSXtR.v
labo/FPGA_MSXtR_CPU_001/: FPGA_MSXtR.gprj
labo/FPGA_MSXtR_CPU_001/impl/: FPGA_MSXtR_process_config.json
labo/FPGA_MSXtR_CPU_002/: readme.md
labo/FPGA_MSXtR_CPU_003/: FPGA_MSXtR.gprj
labo/FPGA_MSXtR_VDP_000/: FPGA_MSXtR.gprj
labo/FPGA_MSXtR_VDP_001/: FPGA_MSXtR.gprj  readme.md
labo/FPGA_MSXtR_VDP_002/: FPGA_MSXtR.gprj  readme.md
labo/FPGA_MSXtR_VDP_003/: readme.md  tangnano20k_hdmi_labo.gprj
labo/FPGA_MSXtR_VDP_004/: FPGA_MSXtR.gprj  readme.md
labo/FPGA_MSXtR_VDP_005/: readme.md  tangnano20k_vdp_cartridge.gprj
labo/FPGA_MSXtR_VDP_006/: readme.md  tangnano20k_vdp_cartridge.gprj
labo/FPGA_MSXtR_VDP_007/: readme.md  tangnano20k_vdp_cartridge.gprj
labo/FPGA_MSXtR_VDP_008_LCD/: tangnano20k_vdp_cartridge.gprj
labo/FPGA_MSXtR_VDP_008_LCD_ONLY/: memo.txt  readme.md  tangnano20k_vdp_cartridge.gprj
labo/FPGA_MSXtR_VDP_009_LCD/: tangnano20k_vdp_cartridge.gprj
pcb/FPGA_MSXtR_Portable_Keyboard/: FPGA_MSXtR_Portable_Keyboard.kicad_pcb  FPGA_MSXtR_Portable_Keyboard.kicad_prl  FPGA_MSXtR_Portable_Keyboard.kicad_pro  FPGA_MSXtR_Portable_Keyboard.kicad_sch  fp-info-cache
pcb/FPGA_MSXtR_TangNano20Kx2/: FPGA_MSXtR_TangNano20Kx2.kicad_pcb  FPGA_MSXtR_TangNano20Kx2.kicad_prl  FPGA_MSXtR_TangNano20Kx2.kicad_pro  FPGA_MSXtR_TangNano20Kx2.kicad_sch  fp-info-cache
(+606 files in other folders)
